Realign TOC, issue #3544

--- a/css/refactor/entrepreneurship.less
+++ b/css/refactor/entrepreneurship.less
@@ -24,17 +24,17 @@
 div.toc {
   li.toc-preface {
     // calc(1em + 3px)
-    margin-left: 15px;
+    //margin-left: 15px;
   }
   li.toc-part a.target-part {
+    // display: none;
     margin-top: 19px;
     background: url("ccap-business/unit.svg") no-repeat left;
     background-size: contain;
-    //hard coded values are used here for alignment. due to the current limitation of the scale-padding mixin, negative values of this size are too large to acheive
-    margin-left: -5px;
+    margin-left: (21.6px - 15px) / 2; // (toc-box size - icon size / 2)
     .scale-padding(1, padding-right);
     // calc(.scale-padding(6, padding-left) + 3px);
-    padding-left: 37px;
+    padding-left: 29px;
     .scale-padding(1, margin-bottom);
     .toc-unit-styles();
 
@@ -46,10 +46,6 @@ div.toc {
   }
 }
 
-
-.book .toc ul li.toc-appendix::before {
-  margin-left: 37.6px; // Not converting with scale-padding as it looks really delicate
-}
 /* -------------------------
  * Entrepreneurship Notes
  * ------------------------
